--- a/translations/CHCookieConsentBundle.fr.yml
+++ b/translations/CHCookieConsentBundle.fr.yml
@@ -1,7 +1,7 @@
 ch_cookie_consent:
     title: 'Cookies sur notre site.'
     intro: ''
-    read_more: 'read more about this'
+    read_more: 'En savoir plus'
     analytics:
         title: 'Do you want analytical cookies?'
         description: ''
