--- a/translations/CHCookieConsentBundle.fr.yml
+++ b/translations/CHCookieConsentBundle.fr.yml
@@ -1,23 +1,25 @@
 ch_cookie_consent:
-    title: 'Cookies sur notre site.'
-    intro: ''
+    title: 'KYOSC et les Cookies'
+    intro: 'Nous utilisons les cookies afin de fournir les services et fonctionnalités proposés sur notre site et afin d’améliorer l’expérience de nos utilisateurs. Les cookies sont des données qui sont téléchargés ou stockés sur votre ordinateur ou sur tout autre appareil.
+            En cliquant sur ”J’accepte”, vous acceptez l’utilisation des cookies. Vous pourrez toujours les désactiver ultérieurement. Si vous supprimez ou désactivez nos cookies, vous pourriez rencontrer des interruptions ou des problèmes d’accès au site.
+            Les cookies « nécessaires », internes, permettent d’enregistrer des informations entre deux consultations d’un même site web sur un même appareil. Ils permettent d’enregistrer un panier d’achat, des identifiants de connexion ou encore des éléments de personnalisation de l’interface.'
     read_more: 'En savoir plus'
     analytics:
-        title: 'Do you want analytical cookies?'
+        title: 'Souhaitez vous autoriser les Cookies techniques ?'
         description: ''
     tracking:
-        title: 'Do you want tracking cookies?'
+        title: 'Souhaitez vous autoriser les Cookies de traçage ?'
         description: ''
     marketing:
-        title: 'Do you want personalised ads?'
+        title: 'Souhaitez vous autoriser les Cookies publicitaires ?'
         description: ''
     social_media:
-        title: 'Do you want social media cookies?'
+        title: 'Souhaitez vous autoriser les Cookies liés aux réseaux sociaux ?'
         description: ''
-    no: 'No'
-    yes: 'Yes'
-    save: 'Save'
-    use_only_functional_cookies: 'Only use functional cookies'
-    use_all_cookies: 'Allow all cookies'
-    show_details: 'Show details'
-    hide_details: 'Hide details'
+    no: 'Non'
+    yes: 'Oui'
+    save: 'Sauvegarder mes préférences'
+    use_only_functional_cookies: 'Tout refuser'
+    use_all_cookies: 'Tout autoriser'
+    show_details: 'Plus de détails'
+    hide_details: 'Moins de details'
